--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles/globals.css" />
+    <link rel="stylesheet" href="styles/homestyle.css" />
+  </head>
+  <body>
+    <div class="home-page">
+      <div class="div">
+        <div class="overlap-group">
+          <div class="overlap">
+            <img class="navbar" src="img/navbar.svg" />
+            <div class="nav-btns">
+              <div class="navbar-2">
+                <a href="#"><div class="text-wrapper">HOME</div></a>
+                <a href="./about.html"><div class="text-wrapper-2">ABOUT US</div></a>
+                <a href="./order.html"><div class="text-wrapper-3">ORDER</div></a>                
+                <a href="./contact.html"><div class="text-wrapper-4">CONTACT</div></a>
+              </div>
+              <div class="language-btn">EN</div>
+              <div class="language-btn-2">DE</div>
+            </div>
+            <div class="text-wrapper-5">CompanyName</div>
+          </div>
+          <div class="header-advantages-wrapper"><div class="header-advantages">LOREM IPSUM</div></div>
+          <div class="overlap-2">
+            <img class="text-on-a-path" src="img/text-on-a-path.svg" />
+            <div class="rectangle"></div>
+            <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+            <p class="text-wrapper-6">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+            <p class="text-wrapper-7">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+            <p class="text-wrapper-8">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+            <div class="text-wrapper-9">Advantage 1</div>
+            <div class="text-wrapper-10">Advantage 2</div>
+            <div class="text-wrapper-11">Advantage 3</div>
+            <div class="text-wrapper-12">Advantage 4</div>
+          </div>
+        </div>
+        <div class="div-wrapper"><p class="text-wrapper-13">2025 @AuthorName. All rights reserved</p></div>
+        <div class="overlap-3"><div class="text-wrapper-14">Section 1</div></div>
+        <div class="overlap-4">
+          <div class="overlap-5"><div class="text-wrapper-15">Video</div></div>
+          <div class="overlap-6"><div class="text-wrapper-16">Video</div></div>
+        </div>
+        <div class="overlap-7"><div class="text-wrapper-14">Section 2</div></div>
+        <div class="overlap-8"><div class="text-wrapper-14">Section 3</div></div>
+        <img class="component" src="img/component-10.svg" />
+      </div>
+    </div>
+  </body>
+</html>
